practice/istio-fault-injection.yaml
# Fault Injection 교육용 VirtualService 설정
# 교육 시 시연을 위한 장애 주입 시나리오들

---
# 시나리오 A: Movie Service 지연 장애 (5초 지연)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: movie-service-fault-delay
  namespace: theater-msa
spec:
  hosts:
  - movie-service
  http:
  - match:
    - headers:
        x-fault-delay:
          exact: "true"
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 5s
    route:
    - destination:
        host: movie-service
        subset: ctx1
      weight: 30
    - destination:
        host: movie-service
        subset: ctx2
      weight: 70
  - match:
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: movie-service
        subset: ctx1
      weight: 100
  - route:
    - destination:
        host: movie-service
        subset: ctx1
      weight: 30
    - destination:
        host: movie-service
        subset: ctx2
      weight: 70

---
# 시나리오 B: User Service HTTP 오류 장애 (50% 확률로 500 오류)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-service-fault-abort
  namespace: theater-msa
spec:
  hosts:
  - user-service
  http:
  - match:
    - headers:
        x-fault-abort:
          exact: "true"
    fault:
      abort:
        percentage:
          value: 50.0
        httpStatus: 500
    route:
    - destination:
        host: user-service
        subset: ctx1
      weight: 70
    - destination:
        host: user-service
        subset: ctx2
      weight: 30
  - match:
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: user-service
        subset: ctx2
      weight: 100
  - route:
    - destination:
        host: user-service
        subset: ctx1
      weight: 70
    - destination:
        host: user-service
        subset: ctx2
      weight: 30

---
# 시나리오 C: Booking Service 완전 차단 (CTX2 클러스터 장애 시뮬레이션)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: booking-service-fault-block
  namespace: theater-msa
spec:
  hosts:
  - booking-service
  http:
  - match:
    - headers:
        x-fault-block:
          exact: "true"
    route:
    - destination:
        host: booking-service
        subset: ctx1
      weight: 100
  - match:
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: booking-service
        subset: ctx1
      weight: 100
  - route:
    - destination:
        host: booking-service
        subset: ctx1
      weight: 50
    - destination:
        host: booking-service
        subset: ctx2
      weight: 50
